<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCriar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/titulo_tela_novoProduto"
                android:textAlignment="center"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/txt_nomeProduto"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_saida_nomeProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autofillHints="namePerson"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/txt_dig_nome"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/txt_valorProduto"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_saida_valorProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autofillHints="number"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/txt_dig_preco"
                android:inputType="number|numberDecimal"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/txt_totalProduto"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_edit_totalProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autofillHints="number"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/txt_dig_quat"
                android:inputType="number"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/txt_minimProduto"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_edit_minimProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autofillHints="number"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/txt_dig_quat"
                android:inputType="number"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_confirmar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#56CF4D"
                android:text="@string/btn_salvar"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_buscar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/purple_500"
                android:onClick="voltaTela"
                android:text="@string/btn_voltar"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>