<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaSaida">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/titulo_tela_saidaProduto"
                android:textAlignment="center"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/txt_nomeProduto"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_saida_nomeProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autofillHints="namePerson"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/txt_dig_nome"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/txt_valorProduto"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_saida_valorProduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autofillHints="number"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/txt_dig_preco"
                android:inputType="number|numberDecimal"
                android:textSize="24sp" />

            <ListView
                android:id="@+id/lista_pesquisar"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:nestedScrollingEnabled="true"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_fechar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#BD0521"
                android:onClick="fecharListaBusca"
                android:text="@string/btn_fechar"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/txt_codgoProduto"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/txt_saidaProduto"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_saida_codigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="number"
                    android:ems="10"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/txt_dig_quat"
                    android:inputType="number"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_saida_saida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="number"
                    android:ems="10"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/txt_dig_quat"
                    android:inputType="number"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_confirmar"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#56CF4D"
                    android:onClick="confirmarProduto"
                    android:text="@string/btn_confirmar"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_buscar"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/purple_500"
                    android:onClick="buscarProduto"
                    android:text="@string/btn_pesquisar"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ListView
                android:id="@+id/lista_saida"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="20dp"
                android:nestedScrollingEnabled="true">

            </ListView>

            <Button
                android:id="@+id/btn_finalizar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#BD0521"
                android:onClick="finalizar"
                android:text="@string/btn_finalizar"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_voltar2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/purple_500"
                android:onClick="voltaTela"
                android:text="@string/btn_voltar"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>